--- a/health.html
+++ b/health.html
@@ -1,52 +1,40 @@
-document.getElementById('health-form').addEventListener('submit', function(event) {
-    event.preventDefault();
-    const temperature = document.getElementById('temperature').value;
-    const sleep = document.getElementById('sleep').value;
-    const mood = document.getElementById('mood').value;
-
-    // ここでデータを保存するロジックを追加できます
-
-    // グラフにデータを追加
-    addTemperatureData(temperature);
-});
-
-const ctx = document.getElementById('temperatureChart').getContext('2d');
-const temperatureChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        labels: [],
-        datasets: [{
-            label: '体温 (℃)',
-            data: [],
-            borderColor: '#1e90ff',
-            backgroundColor: 'rgba(30, 144, 255, 0.2)',
-            fill: true,
-        }]
-    },
-    options: {
-        responsive: true,
-        scales: {
-            x: {
-                title: {
-                    display: true,
-                    text: '時間'
-                }
-            },
-            y: {
-                title: {
-                    display: true,
-                    text: '体温 (℃)'
-                },
-                suggestedMin: 35,
-                suggestedMax: 40
-            }
-        }
-    }
-});
-
-function addTemperatureData(temperature) {
-    const currentTime = new Date().toLocaleTimeString();
-    temperatureChart.data.labels.push(currentTime);
-    temperatureChart.data.datasets[0].data.push(temperature);
-    temperatureChart.update();
-}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>体調管理</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body>
+    <div class="container">
+        <h1>体調管理</h1>
+        <form id="health-form">
+            <div class="form-group">
+                <label for="date">日付:</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+            <div class="form-group">
+                <label for="temperature">体温 (℃):</label>
+                <input type="number" id="temperature" name="temperature" step="0.1" required>
+            </div>
+            <div class="form-group">
+                <label for="sleep">睡眠時間 (時間):</label>
+                <input type="number" id="sleep" name="sleep" step="0.1" required>
+            </div>
+            <div class="form-group">
+                <label for="mood">気分:</label>
+                <select id="mood" name="mood" required>
+                    <option value="良い">良い</option>
+                    <option value="普通">普通</option>
+                    <option value="悪い">悪い</option>
+                </select>
+            </div>
+            <button type="submit">送信</button>
+        </form>
+        <canvas id="temperatureChart"></canvas>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
