--- a/health.html
+++ b/health.html
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label for="sleep">睡眠時間 (時間):</label>
-                <input type="number" id="sleep" name="sleep" step="0.1" required>
+                <input type="number" id="sleep" name="sleep" required>
             </div>
             <div class="form-group">
                 <label for="mood">気分:</label>
@@ -33,8 +33,8 @@
             </div>
             <button type="submit">送信</button>
         </form>
-        <canvas id="temperatureChart"></canvas>
-        <canvas id="sleepChart"></canvas>
+        <canvas id="temperatureChart" width="800" height="400"></canvas>
+        <canvas id="sleepChart" width="800" height="400"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
