ホームページの不要なコードを削除し、整合性を向上

--- a/home.html
+++ b/home.html
@@ -54,9 +54,6 @@
         </div>
 
         <div id="healthTab" class="tab-content">
-            
-                </div>
-            </div>
             <div class="container">
                 <h1>体調管理</h1>
                 <form id="health-form">
@@ -212,4 +209,4 @@
         }
     </script>
 </body>
-</html>
+</html>s
