--- a/log.html
+++ b/log.html
@@ -15,6 +15,8 @@
     </form>
     <h2>保存されたメモ</h2>
     <div id="logEntries"></div>
+    <br>
+    <a href="home.html" class="button">ホームに戻る</a>
 
     <script src="scripts.js"></script>
 </body>
